# pyprojectstats

./: LICENSE  README.md  azure-pipelines.yml  pyproject.toml
pyprojectstats/: __init__.py  __main__.py  collect.py  project.py  report.py
pyprojectstats/analyse/: __init__.py  core.py  cython.py  notebook.py  python.py  rst.py
tests/: test_collect.py
tests/data/: README.md
tests/data/spam/: ham.py  spam.py
