[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pyprojectstats"
author = "Christoph Deil"
author-email = "Deil.Christoph@gmail.com"
home-page = "https://github.com/cdeil/pyprojectstats"
requires-python = ">=3.6"
requires = [
    "click",
    "dataclasses; python_version < '3.7'",
    "Cython",
    "pandas",
]
description-file = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.flit.scripts]
pyprojectstats = "pyprojectstats.__main__:cli"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
]

